# Dicta

./: .gitignore  README.md  pyproject.toml
docs/: design_record_000_foundation.md  design_record_001_revision_projection.md  design_record_002_appraiser_syntax_boundary.md  semantic_test_matrix_000.md
src/dicta/: __init__.py  cli.py
src/dicta/core/: __init__.py  appraise.py  models.py  program.py  projection.py  qualification.py  query.py
tests/: test_appraise.py  test_cli.py  test_core_models.py  test_golden_equivalence.py  test_program_motion.py  test_projection.py  test_query.py
