[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dicta"
version = "0.1.0"
description = "Hosted Python semantic-kernel prototype for Dicta."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic",
    "typer",
]

[project.scripts]
dicta = "dicta.cli:app"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "E501"]
